[package]
name = "scalatest-watcher"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["ws"] }
chrono = "0.4.41"
config = "0.15.11"
junit-parser = { version = "1.4.0", features = ["serde"] }
notify = "8.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
walkdir = "2.5.0"
